implementando AssociadoMapper e ajustando DTOs e Testes